# opensequencediagrams-core

./: .gitignore  Cargo.toml  README.md  rename-instructions.md
.github/workflows/: ci.yml  publish.yml
examples/: demo.html  gen_svg.rs
guideline-core/: Cargo.toml
guideline-core/examples/: debug_svg.rs  generate_svg.rs  render_file.rs  theme_demo.rs
guideline-core/src/: ast.rs  lib.rs  parser.rs  renderer.rs  theme.rs
guideline-core/tests/: real_world.rs
guideline-wasm/: Cargo.toml
guideline-wasm/src/: lib.rs
osd-core/: Cargo.toml
osd-core/examples/: debug_activation.rs  debug_svg.rs  gen_svg.rs  generate_svg.rs  render_file.rs  theme_demo.rs
osd-core/src/: ast.rs  lib.rs  parser.rs  renderer.rs
osd-core/tests/: real_world.rs  stress_test.rs
osd-wasm/: Cargo.toml
osd-wasm/src/: lib.rs
