[package]
name = "osd-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "OpenSequenceDiagrams core - A sequence diagram parser and SVG renderer"

[dependencies]
nom = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"
