[package]
name = "osd-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly bindings for OpenSequenceDiagrams"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
osd-core = { path = "../osd-core" }
wasm-bindgen = { workspace = true }

[profile.release]
opt-level = "s"
lto = true
